--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "food ordering",
   "main": "index.js",
   "scripts": {
-   "compile:sass": "node-sass sass/main.scss style/style.css -w"
+   "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
