--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "foodapp",
-  "version": "1.0.0",
-  "description": "food ordering",
-  "main": "index.js",
-  "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Feevah/Food-App.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Feevah/Food-App/issues"
-  },
-  "homepage": "https://github.com/Feevah/Food-App#readme",
-  "dependencies": {
-    "node-sass": "^4.12.0"
-  }
+	"name": "foodapp",
+	"version": "1.0.0",
+	"description": "food ordering",
+	"main": "index.js",
+	"scripts": {
+		"watch:sass": "node-sass sass/main.scss css/style.css -w",
+    
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/font-awesome.css css/style.comp.css",
+
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Feevah/Food-App.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Feevah/Food-App/issues"
+	},
+	"homepage": "https://github.com/Feevah/Food-App#readme",
+	"dependencies": {
+		"node-sass": "^4.12.0"
+	}
 }
