--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"watch:sass": "node-sass sass/main.scss css/style.css -w",
-    
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "concat:css": "concat -o css/style.concat.css css/font-awesome.css css/style.comp.css",
-
+		"compile:sass": "node-sass sass/main.scss css/style.comp.css",
+		"concat:css": "concat -o css/style.concat.css css/font-awesome.css css/style.comp.css",
+		"prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+		"compress:css": "node-sass css/style.prefix.css css/style.min.css --output-style compressed"
 	},
 	"repository": {
 		"type": "git",
@@ -22,5 +22,8 @@
 	"homepage": "https://github.com/Feevah/Food-App#readme",
 	"dependencies": {
 		"node-sass": "^4.12.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^9.7.6"
 	}
 }
